deployment/nginx-ingress.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      volumes:
        - name: tls-secret
          secret:
            secretName: default-server-secret  # Ensure this matches your TLS secret name
      containers:
        - image: nginx/nginx-ingress:edge
          imagePullPolicy: Always
          name: nginx-ingress
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 101 # nginx
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
            - -default-server-tls-secret=nginx-ingress/default-server-secret
          volumeMounts:
            - name: tls-secret
              mountPath: /etc/nginx/tls
              readOnly: true
