deployment/gin-gonic-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
        - name: golang-app
          image: gin-gonic-app:latest
          ports:
            - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: golang-app
spec:
  selector:
    app: golang-app
  ports:
    - protocol: TCP
      port: 2000
      targetPort: 2000
  type: ClusterIP
