deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - myapp.local
      secretName: my-tls-secret  # 👈 Use the TLS secret here
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /spring
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /golang
            pathType: Prefix
            backend:
              service:
                name: golang-app
                port:
                  number: 2000
